# samples

./: .gitignore
01-tutorials/: README.md
01-tutorials/01-fundamentals/: README.md
01-tutorials/01-fundamentals/07-memory-persistent-agents/: personal_agent_with_memory.ipynb
01-tutorials/01-fundamentals/09-bidirectional-streaming/: README.md  requirements.txt  test_simple_novasonic.py  websocket_client.html  websocket_example.py
01-tutorials/01-fundamentals/10-human-in-the-loop/: README.md  (+1 more)
02-samples/01-restaurant-assistant/: requirements.txt
02-samples/05-personal-assistant/: requirements.txt
02-samples/07-whatsapp-fintech-sample/: requirements.txt
02-samples/10-multi-modal-email-assistant-agent/: requirements.txt
02-samples/12-medical-document-processing-assistant/: requirements.txt
02-samples/13-aws-audit-assistant/: requirements.txt
02-samples/17-genai-powered-financial-advisor-tools/: requirements.txt
02-samples/18-ai-ads-generation-agent-with-crypto-payments/: paid_server.py  requirements.txt
03-integrations/Openinference-Arize/: Arize-Observability-openinference-strands.ipynb  requirements.txt
03-integrations/exa/: .env-obs.example  .env.example  .gitignore  .prompt  README.md  deep_research_assistant.py  pyproject.toml  requirements.txt  setup-new.sh  setup-observability.py  setup-with-observability.sh
03-integrations/nova-act/: requirements.txt
04-UX-demos/03-hvac-data-analytics-agent/: package-lock.json
05-agentic-rag/1-corrective-rag-agent/: requirements.txt
07-evals/04-trajectory-evaluation/: 04-trajectory-evaluation.ipynb
(+19 files in other folders)
